added admin dashoard hotel func

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+     <style>
+      .swal2-container {
+      z-index: 1000000 !important;
+      }
+      </style>
     <title>TripTrekker - Admin</title>
   </head>
   <body>
